# goit_web_hw_02

./: Dockerfile  Dockerfile.txt  main_1407.py  pyproject.toml
